--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -332,11 +332,9 @@ body.new-user #secondary-nav li.vehicles-drivers-users a:visited,
 body.drivers #secondary-nav li.vehicles-drivers-users a:link, 
 body.drivers #secondary-nav li.vehicles-drivers-users a:visited,
 body.vehicles #secondary-nav li.vehicles-drivers-users a:link, 
-body.vehicles #secondary-nav li.vehicles-drivers-users a:visited,
-body.providers.index #secondary-nav li.providers a:link, 
-body.providers.index #secondary-nav li.providers a:visited,
-body.funding-sources #secondary-nav li.funding-sources a:link, 
-body.funding-sources #secondary-nav li.funding-sources a:visited {
+body.vehicles #secondary-nav li.vehicles-drivers-users a:visited, 
+body.home.index #secondary-nav li.admin a:link, 
+body.home.index #secondary-nav li.admin a:visited {
     background: #fff;
     color: #009FFB;
 }
