--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag "print.css", :media=>'print' %>
   <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
   <%= stylesheet_link_tag "jquery.weekcalendar.css" %>
+  <%= stylesheet_link_tag "jquery-ui-timepicker-addon.css" %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_tag do %>
     <%= render :partial => "layouts/constants.js" %>
