--- a/app/views/shared/_date_picker_javascript.html.erb
+++ b/app/views/shared/_date_picker_javascript.html.erb
@@ -3,18 +3,20 @@
 function makeDatePickers () {
   $('#trip_pickup_time, #trip_appointment_time').datetimepicker({
         ampm: true,
-        stepMinute: 15,
-        stepHour: 1,
-        hourMin: RidePilot.business_hours.start,
-        hourMax: RidePilot.business_hours.end,
-        hourGrid: 2,
-        minuteGrid: 15,
-        timeFormat: 'hh:mm t',
-        dateFormat: 'D yy-mm-dd',
-        showOn: "button",
         buttonImage: "<%=  image_path 'calendar-clock.png' %>",
         buttonImageOnly: true,
-        constrainInput: false
+        constrainInput: false,
+        dateFormat: 'D yy-mm-dd',
+        hourGrid: 2,
+        hourMax: RidePilot.business_hours.end,
+        hourMin: RidePilot.business_hours.start,
+        minuteGrid: 15,
+        showOn: "button",
+        showTimezone: false,
+        stepHour: 1,
+        stepMinute: 15,
+        timeFormat: 'hh:mm tt Z',
+        timezone: RidePilot.timezone.name,
   });
 }
 
