--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,3 +1,4 @@
+<% via_run_page ||= false %>
 <%= form_for @trip, :html => (@remote ? {"data-remote" => true} : {} ) do |f| %>
   <% if @trip.errors.any? %>
     <div id="error_explanation">
@@ -21,59 +22,61 @@
         <label for="customer">Customer:</label>
         <%= render "customer", :f => f, :trip => @trip %>
       </li>
-
-      <li class="selfclear timepicker">
-        <%= f.label :pickup_time, "Pickup Time:" %>
-        <%= f.text_field :pickup_time, :value => @trip.pickup_time.try(:to_s, :form) %>
-      </li>
-
-      <li class="selfclear timepicker">
-        <%= f.label :appointment_time, "Appointment Time:" %>
-        <%= f.text_field :appointment_time, :value => @trip.appointment_time.try(:to_s, :form) %>
-      </li>
-
-      <li class="selfclear">
-        <%= f.label :round_trip, "Round Trip:" %>
-        <%= f.check_box :round_trip %>
-      </li>
-
-      <li class="selfclear">
-        <%= f.label :pickup_address_label, "Pickup Address:" %>
-        <%= autocomplete_field_tag "pickup_search_address", @trip.pickup_address.try(:text), autocomplete_addresses_path, :size => 30, :id_element => "#trip_pickup_address_id", :class => "nearly-full", "data-original-value" => @trip.pickup_address.try(:text), "data-original-id" => @trip.pickup_address.try(:id) %>
-        <%= f.hidden_field :pickup_address_id %>
-        <a href="javascript:edit_pickup_address();" class="pickup_address_details details" style="display: <%= @trip.pickup_address.try(:id).present? ? "inline" : "none" %>"></a>
-      </li>
       
-      <li class="selfclear">
-        <%= f.fields_for :customer do |c| %>
-          <%= c.label :phone_number_1, "Customer Phone:" %>
-          <%= c.text_field :phone_number_1, :class => :full %>
-        <% end %>
-        <% if @trip.customer.try(:id).blank? %>
-          <input id="trip_customer_attributes_id" type="hidden" name="trip[customer_attributes][id]">
-        <% end %>
-      </li>
+      <% if via_run_page %>
+        <li class="selfclear timepicker">
+          <%= f.label :pickup_time, "Pickup Time:" %>
+          <%= f.text_field :pickup_time, :value => @trip.pickup_time.try(:to_s, :form) %>
+        </li>
 
-      <li class="selfclear">
-        <%= f.label :dropoff_address_label, "Dropoff Address:" %>
-        <%= autocomplete_field_tag "dropoff_search_address", @trip.dropoff_address.try(:text), autocomplete_addresses_path, 
-          :size                => 30, 
-          :update_elements     => {
-            :id                   => '#trip_dropoff_address_id',
-            :default_trip_purpose => '#trip_trip_purpose'
-          },
-          :class                => "nearly-full", 
-          "data-original-value" => @trip.dropoff_address.try(:text), 
-          "data-original-id"    => @trip.dropoff_address.try(:id) %>
-        <%= f.hidden_field :dropoff_address_id %>
-        <a href="javascript:edit_dropoff_address();" class="dropoff_address_details details" style="display: <%= @trip.dropoff_address.try(:id).present? ? "inline" : "none" %>"></a>
-      </li>
+        <li class="selfclear timepicker">
+          <%= f.label :appointment_time, "Appointment Time:" %>
+          <%= f.text_field :appointment_time, :value => @trip.appointment_time.try(:to_s, :form) %>
+        </li>
 
-      <li class="selfclear">
-        <label for="dropoff_phone">Dropoff Phone:</label>
-        <input type="text" size="30" name="dropoff_phone" id="dropoff_phone" value="<%= @trip.dropoff_address.try(:phone_number) %>" readonly="readonly" class="full"/>
-      </li>
+        <li class="selfclear">
+          <%= f.label :round_trip, "Round Trip:" %>
+          <%= f.check_box :round_trip %>
+        </li>
 
+        <li class="selfclear">
+          <%= f.label :pickup_address_label, "Pickup Address:" %>
+          <%= autocomplete_field_tag "pickup_search_address", @trip.pickup_address.try(:text), autocomplete_addresses_path, :size => 30, :id_element => "#trip_pickup_address_id", :class => "nearly-full", "data-original-value" => @trip.pickup_address.try(:text), "data-original-id" => @trip.pickup_address.try(:id) %>
+          <%= f.hidden_field :pickup_address_id %>
+          <a href="javascript:edit_pickup_address();" class="pickup_address_details details" style="display: <%= @trip.pickup_address.try(:id).present? ? "inline" : "none" %>"></a>
+        </li>
+      
+        <li class="selfclear">
+          <%= f.fields_for :customer do |c| %>
+            <%= c.label :phone_number_1, "Customer Phone:" %>
+            <%= c.text_field :phone_number_1, :class => :full %>
+          <% end %>
+          <% if @trip.customer.try(:id).blank? %>
+            <input id="trip_customer_attributes_id" type="hidden" name="trip[customer_attributes][id]">
+          <% end %>
+        </li>
+
+        <li class="selfclear">
+          <%= f.label :dropoff_address_label, "Dropoff Address:" %>
+          <%= autocomplete_field_tag "dropoff_search_address", @trip.dropoff_address.try(:text), autocomplete_addresses_path, 
+            :size                => 30, 
+            :update_elements     => {
+              :id                   => '#trip_dropoff_address_id',
+              :default_trip_purpose => '#trip_trip_purpose'
+            },
+            :class                => "nearly-full", 
+            "data-original-value" => @trip.dropoff_address.try(:text), 
+            "data-original-id"    => @trip.dropoff_address.try(:id) %>
+          <%= f.hidden_field :dropoff_address_id %>
+          <a href="javascript:edit_dropoff_address();" class="dropoff_address_details details" style="display: <%= @trip.dropoff_address.try(:id).present? ? "inline" : "none" %>"></a>
+        </li>
+
+        <li class="selfclear">
+          <label for="dropoff_phone">Dropoff Phone:</label>
+          <input type="text" size="30" name="dropoff_phone" id="dropoff_phone" value="<%= @trip.dropoff_address.try(:phone_number) %>" readonly="readonly" class="full"/>
+        </li>
+      <% end %>
+      
       <div class="repeats">
         <li class="selfclear">
           <!-- we need some complexity, because this form handles 
