Add model to set the select options for ethnicity on a per-agency basis

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -61,7 +61,7 @@
 
       <li class="selfclear">
         <%= f.label :ethnicity, "Ethnicity:" %>
-        <%= f.select :ethnicity, @ethnicities %>
+        <%= f.collection_select :ethnicity, @ethnicities, :name, :name %>
       </li>
     </ol>
 
