--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -285,6 +285,47 @@
 <% end %>
 <hr />
 
+<h2 class="section-header">Ethnicities</h2>
+
+<% if @provider.ethnicities.size == 0 %>
+  <p>No ethnicities yet.</p>
+<% else %>
+  <table>
+    <tr>
+      <th>Name</th>
+      <% if can? :edit, ProviderEthnicity %>
+        <th></th>
+        <th></th>
+      <% end %>
+    </tr>
+    <% for ethnicity in @provider.ethnicities %>
+      <tr>
+        <td class="name">
+          <% if can? :edit, ProviderEthnicity %>
+            <%= link_to ethnicity.name, provider_ethnicity_path(ethnicity) %>
+          <% else %>
+            <%= ethnicity.name %>
+          <% end %>
+        </td>
+        <% if can? :edit, ProviderEthnicity %>
+          <td><%= link_to "Edit", edit_provider_ethnicity_path(ethnicity), :class=>'edit edit-ethnicity' %></td>
+          <td><%= link_to "Delete", ethnicity, :confirm => 'Are you sure?', :method => :delete, :class=>'delete' %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
+
+<% if @provider == current_user.current_provider %>
+  <p><%= link_to "Create Ethnicity", new_provider_ethnicity_path, :class=>'new action-bttn' %></p>
+<% else %>
+  <p>You are currently logged in to
+  <%= current_user.current_provider.name %>.  To create an ethnicity for
+  <%= @provider.name %>, please switch providers by using the dropdown
+  menu at the top of this page.</p>
+<% end %>
+<hr />
+
 <h2 class="section-header">Region Boundaries</h2>
 
 <div id="region">
