--- a/app/views/trips/_customer.html.erb
+++ b/app/views/trips/_customer.html.erb
@@ -1,4 +1,4 @@
-<%- if @customer.id.present? -%>
+<%- if @customer.try(:id).present? -%>
   <div id="trip_customer_name_wrapper">
     <strong id="trip_customer_name_string"><%= link_to @customer.name, @customer %></strong>
     &nbsp;&nbsp;&nbsp;&nbsp;(<a href="#" id="change_trip_customer_link">Change Customer</a>)
@@ -18,9 +18,9 @@
       :address                   => "#pickup_search_address",
       :default_funding_source_id => "#trip_funding_source_id"
     },
-    :style => @customer.id.present? ? 'display: none' : ''
+    :style => @customer.try(:id).present? ? 'display: none' : ''
 %>
-<%- if !@customer.id.present? -%>
+<%- if !@customer.try(:id).present? -%>
   <input type="button" name="new_customer" value="New Customer" id="new_customer" data-path="<%= new_customer_path %>">
 <%- end -%>
 <%= javascript_tag do %>
