--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -2,29 +2,65 @@
 <script type='text/javascript'>
 
   function autocompleted(address, field) {
-    if (address.label == "New Address") {
-      $( "#" + field + "-address-form" ).dialog( "open" );
-    } else if (address.id) {
-      //found an existing address
-        id_field = '#trip_' + field + '_address_id';
-      $(id_field).val(address.id);
-      label_field = '#' + field + '_address_label';
-      $(label_field).val(address.label);
-      //close dialog
+    console.log("autocompleted data", address);
+    if (address.id) {
+      populate_address_form(field, address);
+      update_address_fields(field, address);
       $( "#" + field + "-address-form" ).dialog( "close" );
+      $("." + field + "_address_details").show();
+    } else if (address.label == "New Address") {
+      populate_address_form(field, {});
+      open_form_for_creating(field);
     } else {
       //found a geocode, fill in fields, open the dialog for saving
-      $('#' + field + '_name').val(address.name);
-      $('#' + field + '_building_name').val(address.building_name);
-      $('#' + field + '_address').val(address.address);
-      $('#' + field + '_city').val(address.city);
-      $('#' + field + '_state').val(address.state);
-      $('#' + field + '_zip').val(address.zip);
-      $('#' + field + '_lat').val(address.lat);
-      $('#' + field + '_lon').val(address.lon);
-      $('#' + field + '_in_district').val(address.in_district);
-      $( "#" + field + "-address-form" ).dialog( "open" );
+      populate_address_form(field, address);
+      open_form_for_creating(field);
     }
+  }
+  
+  function populate_address_form(field, address) {
+    form = $("#" + field + "-address-form");
+    form.find('#address_id').val(address.id);
+    form.find('#' + field + '_name').val(address.name);
+    form.find('#' + field + '_building_name').val(address.building_name);
+    form.find('#' + field + '_address').val(address.address);
+    form.find('#' + field + '_city').val(address.city);
+    form.find('#' + field + '_state').val(address.state);
+    form.find('#' + field + '_zip').val(address.zip);
+    form.find('#' + field + '_lat').val(address.lat);
+    form.find('#' + field + '_lon').val(address.lon);
+    form.find('#' + field + '_in_district').val(address.in_district);
+  }
+  
+  function open_form_for_creating(field) {
+    $("." + field + "_address_details").hide();
+    form = $("#" + field + "-address-form");
+    form.parent().find('button:first span').text('Add Address');
+    form.dialog( "open" );    
+  }
+  
+  function open_form_for_editing(field) {
+    $("." + field + "_address_details").hide();
+    form = $("#" + field + "-address-form");
+    form.parent().find('button:first span').text('Save Address');
+    form.dialog( "open" );    
+  }
+  
+  function edit_pickup_address() {
+    open_form_for_editing('pickup');
+  }
+
+  function edit_dropoff_address() {
+    open_form_for_editing('dropoff');
+  }
+  
+  function update_address_fields(field, address){
+    id_field = '#trip_' + field + '_address_id';
+    $(id_field).val(address.id);
+    search_field = '#' + field + '_search_address';
+    $(search_field).val(address.label);
+    $(search_field).attr("data-original-value", address.label);
+    $(search_field).attr("data-original-id", address.id);
   }
 
   $(function() {
@@ -80,13 +116,16 @@
     // if no id is returned, error messages are filled in. 
     $('.address-search').live('ajax:success', function(evt, data, status, xhr){
       if (data.id) {
-        $( $(this).attr('data-id-element') ).val(data.id);
-        $( $(this).attr('data-label-element') ).val(data.label);
-        
-        if (data.phone_number) $("#dropoff_phone").val(data.phone_number);
-        if (data.trip_purpose) $("#trip_trip_purpose").val(data.trip_purpose);
+        update_address_fields(data.prefix, data);      
+
+        if (data.prefix == 'dropoff') {
+          if (data.phone_number) $("#dropoff_phone").val(data.phone_number);
+          if (data.trip_purpose) $("#trip_trip_purpose").val(data.trip_purpose);
+        }
         
         $( $(this)[0].parentNode ).dialog( "close" );
+        populate_address_form(data.prefix, data);
+        $("." + data.prefix + "_address_details").show();
       } else {
         //failed to create an address
         for (var field in data) {
@@ -218,14 +257,17 @@
                   $(form).trigger('submit'); 
               },
               Cancel: function() {
-                var prefix = $(this).attr("id").replace(/\-address\-form/, "");
-                var field  = $( "#" + prefix + "_search_address" );
-                field.val( field.attr("data-original-value") );
-                $("#trip_" + prefix + "_address_id").val(field.attr("data-original-id"));
                 $( this ).dialog( "close" );
               }
           },
           close: function() {
+              var prefix = $(this).attr("id").replace(/\-address\-form/, "");
+              var field  = $( "#" + prefix + "_search_address" );
+              field.val( field.attr("data-original-value") );
+              $("#trip_" + prefix + "_address_id").val(field.attr("data-original-id"));
+              console.dir(field);
+              if (parseInt(field.attr("data-original-id")) > 0)
+                  $("." + prefix + "_address_details").show();
           }
       });
     };
