Add the ability, configurable on a per-agency basis, to enter trips records directly from the runs show page

--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -21,6 +21,11 @@
         <%= f.label :scheduling, "Scheduling enabled" %>
         <%= f.check_box :scheduling %>
       </li>
+      
+      <li>
+        <%= f.label :allow_trip_entry_from_runs_page %>
+        <%= f.check_box :allow_trip_entry_from_runs_page %>
+      </li>
     </ol>
 
     <div class="actions">
