--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -36,6 +36,7 @@
     <th>Driver</th>
     <th>Complete</th>
     <% if can? :edit, Run %><th></th><% end %>
+    <% if can?(:create, Trip) && current_user.current_provider.allow_trip_entry_from_runs_page %><th></th><% end %>
   </tr>
   <% if @runs.size > 0 %>
     <% @runs.each do |run| %>
