--- a/app/views/shared/_date_picker_javascript.html.erb
+++ b/app/views/shared/_date_picker_javascript.html.erb
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
 function makeDatePickers () {
-  $('#trip_pickup_time, #trip_appointment_time').datetimepicker({
+  $('input[type=text]#trip_pickup_time, input[type=text]#trip_appointment_time').datetimepicker({
         buttonImage: "<%=  image_path 'calendar-clock.png' %>",
         buttonImageOnly: true,
         constrainInput: false,
