--- a/app/views/trips/_customer.html.erb
+++ b/app/views/trips/_customer.html.erb
@@ -20,7 +20,7 @@
     },
     :style => @customer.try(:id).present? ? 'display: none' : ''
 %>
-<%- if !@customer.try(:id).present? -%>
+<%- if @customer.try(:id).blank? -%>
   <input type="button" name="new_customer" value="New Customer" id="new_customer" data-path="<%= new_customer_path %>">
 <%- end -%>
 <%= javascript_tag do %>
