--- a/app/views/trips/_trip_row.html.erb
+++ b/app/views/trips/_trip_row.html.erb
@@ -16,7 +16,7 @@
     <%= trip.dropoff_address.try :address %>
   </td>
   <td>
-    <%= trip.run_text %>
+    <%= link_to_if trip.run.present?, trip.run_text, runs_path(:start => trip.run.try(:date).try(:to_time).to_i) %>
   </td>
   <td>
     <%= image_tag("tick-circle.png") if trip.customer_informed %>
