--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -8,7 +8,7 @@
 
 <%= render 'list', :display => "none" %>
 
-<%= render 'form', :via_run_page => true %>
+<%= render 'form' %>
 
 <%= render 'javascript' %>
 
