The customer's current ethnicity will always be available in the select list, even when removed from the provider's list of ethnicity.

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -61,7 +61,7 @@
 
       <li class="selfclear ethnicity">
         <%= f.label :ethnicity, "Ethnicity:" %>
-        <%= f.collection_select :ethnicity, @ethnicities, :name, :name %>
+        <%= f.select :ethnicity, @ethnicity_names %>
       </li>
     </ol>
 
