--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -13,7 +13,7 @@
 
   <!-- the customer id needs to be passed in this action -->
   <%= f.hidden_field :customer_id %>
-  <%= hidden_field_tag :run_id, add_new_trip_via_run_page? ? params[:run_id] : "0" %>
+  <%= hidden_field_tag :run_id, add_new_trip_via_run_page? ? params[:run_id] : "" %>
 
   <fieldset class="new-trip">
 
@@ -41,7 +41,13 @@
 
         <li class="selfclear">
           <%= f.label :pickup_address_label, "Pickup Address:" %>
-          <%= autocomplete_field_tag "pickup_search_address", @trip.pickup_address.try(:text), autocomplete_addresses_path, :size => 30, :id_element => "#trip_pickup_address_id", :class => "nearly-full", "data-original-value" => @trip.pickup_address.try(:text), "data-original-id" => @trip.pickup_address.try(:id) %>
+          <%= autocomplete_field_tag "pickup_search_address", @trip.pickup_address.try(:text), autocomplete_addresses_path, 
+            :size => 30, 
+            :id_element => "#trip_pickup_address_id", 
+            :class => "nearly-full", 
+            "data-original-value" => @trip.pickup_address.try(:text), 
+            "data-original-id" => @trip.pickup_address.try(:id) 
+          %>
           <%= f.hidden_field :pickup_address_id %>
           <a href="javascript:edit_pickup_address();" class="pickup_address_details details" style="display: <%= @trip.pickup_address.try(:id).present? ? "inline" : "none" %>"></a>
         </li>
@@ -70,8 +76,9 @@
             },
             :class                => "nearly-full", 
             "data-original-value" => @trip.dropoff_address.try(:text), 
-            "data-original-id"    => @trip.dropoff_address.try(:id) %>
-          
+            "data-original-id"    => @trip.dropoff_address.try(:id) 
+          %>
+          <%= f.hidden_field :dropoff_address_id %>          
           <a href="javascript:edit_dropoff_address();" class="dropoff_address_details details" style="display: <%= @trip.dropoff_address.try(:id).present? ? "inline" : "none" %>"></a>
         </li>
 
