Ensuring dependent objects are destroyed along with parents; Fixing issue in which blank customer records are created from new trip page

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -261,7 +261,7 @@
   
 <% end %>
 
-<% if add_new_trip_via_run_page? %>
+<% unless add_new_trip_via_run_page? %>
   <div id="pickup-address-form" class="address-form">
     <%= render :partial=>'find_or_create_address', :locals=>{:prefix=>'pickup', :address => @trip.pickup_address || @trip.build_pickup_address } %>
   </div>
