--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -311,6 +311,8 @@ button {width: auto; overflow: visible;}
     background: #fff;
     color: #009FFB;
 }
+body.cab-runs #primary-nav li.cab_runs a:link, 
+body.cab-runs #primary-nav li.cab_runs a:visited,
 body.trips #primary-nav li.trips a:link, 
 body.trips #primary-nav li.trips a:visited,
 body.runs #primary-nav li.runs a:link, 
@@ -1203,6 +1205,7 @@ a.action-bttn:active {
     color: #009FFB;
 }
 body.trips.index a.action-bttn.new,
+body.cab-runs.index a.action-bttn.new,
 body.runs.index a.action-bttn.new,
 body.providers.show a.action-bttn.new {
     background: #eee url(images/plus.png) 0.8em center no-repeat scroll;
@@ -1332,6 +1335,7 @@ div.color_swatch {
  * Runs
  *
  */
+body.cab-runs .wc-nav,
 body.runs .wc-nav {
   margin-bottom : 20px;
 }
