Reproduce summary report used by Clackamas County Consortium (first pass - some features still pending ticket 1501)
* The "Center" reason should be added to the list of reasons in the application
* add ADA Eligibility to the customer profile
* Add service level to trips; add default service level to customers
* Add Per Agency fees
* Completed HTML report outline and styling
* Refactored #cctc_summary_report variables
* Filling out report values
* Completed controller tests for ReportsController#cctc_summary_report (except for 2 pending tests)

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -82,11 +82,17 @@
 
   <dt>Medicaid eligible:</dt>
   <dd><%= @customer.medicaid_eligible %></dd>
+
+  <dt>ADA eligible:</dt>
+  <dd><%= @customer.ada_eligible %></dd>
 </dl>
 
 <dl>
   <dt>Default Funding Source:</dt>
   <dd><%= @customer.default_funding_source.try(:name) %></dd>
+  
+  <dt>Default Service Level:</dt>
+  <dd><%= @customer.default_service_level %></dd>
   
   <% unless @customer.group %>
     <dt>Ethnicity:</dt>
