--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -9,6 +9,7 @@
   <li><%= link_to "Donations", :action=>:donations %></li>
   <li><%= link_to "Cab Log", :action=>:cab %></li>
   <li><%= link_to "Monthly Miscellaneous Data", monthlies_path %></li>
+  <li><%= link_to "Clackamas County Transportation Consortium Summary Report", :action=>:cctc_summary_report %></li>
 </ul>
 
 <hr />
