--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -84,9 +84,19 @@
         <%= f.label :medicaid_eligible, "Medicaid Eligible:" %>
         <%= f.check_box :medicaid_eligible %>
       </li>
+
+      <li class="selfclear">
+        <%= f.label :ada_eligible, "ADA Eligible:" %>
+        <%= f.check_box :ada_eligible %>
+      </li>
     </ol>
 
     <ol class="section third">
+      <li class="selfclear">
+        <%= f.label :default_service_level, "Default Service Level:" %>
+        <%= f.select :default_service_level, @service_levels, :include_blank => true %>
+      </li>
+
       <li class="selfclear">
         <%= f.label :default_funding_source_id, "Default Funding Source:" %>
         <%= f.collection_select :default_funding_source_id, @funding_sources, :id, :name, :include_blank => true %>
