--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <%= render :partial => "layouts/constants.js" %>
   <% end %>
   <%= csrf_meta_tag %>
+  <%= yield :head %>
 </head>
 <body class="<%= bodytag_class %>">
 
