--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -138,6 +138,63 @@
   <% end %>
 <% end %>
 
+<h2 class="section-header">Reimbursement Rates</h2>
+<% if can? :edit, @provider %>
+  <%= form_tag change_reimbursement_rates_provider_path(@provider) do %>
+    <fieldset>
+      <ol class="section first">
+        <li><h2>Per-Ride Reimbursement Rates</h2></li>
+        <li>
+          <%= label_tag :oaa3b_per_ride_reimbursement_rate, "OAA III B" %>
+          <%= number_field_tag :oaa3b_per_ride_reimbursement_rate, number_with_precision(@provider.oaa3b_per_ride_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :ride_connection_per_ride_reimbursement_rate, "Ride Connection" %>
+          <%= number_field_tag :ride_connection_per_ride_reimbursement_rate, number_with_precision(@provider.ride_connection_per_ride_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :trimet_per_ride_reimbursement_rate, "Tri-Met" %>
+          <%= number_field_tag :trimet_per_ride_reimbursement_rate, number_with_precision(@provider.trimet_per_ride_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :sdsd_per_ride_reimbursement_rate, "SDSD" %>
+          <%= number_field_tag :sdsd_per_ride_reimbursement_rate, number_with_precision(@provider.sdsd_per_ride_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :stf_van_per_ride_reimbursement_rate, "USDOT STF Van" %>
+          <%= number_field_tag :stf_van_per_ride_reimbursement_rate, number_with_precision(@provider.stf_van_per_ride_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+      </ol>
+      <ol class="section second">
+        <li><h2>Taxi Per-Ride Reimbursement Rates</h2></li>
+        <li>
+          <%= label_tag :stf_taxi_per_ride_administrative_fee, "Administrative Fee" %>
+          <%= number_field_tag :stf_taxi_per_ride_administrative_fee, number_with_precision(@provider.stf_taxi_per_ride_administrative_fee, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :stf_taxi_per_ride_ambulatory_load_fee, "Ambulatory Load Fee" %>
+          <%= number_field_tag :stf_taxi_per_ride_ambulatory_load_fee, number_with_precision(@provider.stf_taxi_per_ride_ambulatory_load_fee, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :stf_taxi_per_ride_wheelchair_load_fee, "Wheelchair Load Fee" %>
+          <%= number_field_tag :stf_taxi_per_ride_wheelchair_load_fee, number_with_precision(@provider.stf_taxi_per_ride_wheelchair_load_fee, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :stf_taxi_per_mile_ambulatory_reimbursement_rate, "Ambulatory Mileage Rate" %>
+          <%= number_field_tag :stf_taxi_per_mile_ambulatory_reimbursement_rate, number_with_precision(@provider.stf_taxi_per_mile_ambulatory_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+        <li>
+          <%= label_tag :stf_taxi_per_mile_wheelchair_reimbursement_rate, "Wheelchair Mileage Rate" %>
+          <%= number_field_tag :stf_taxi_per_mile_wheelchair_reimbursement_rate, number_with_precision(@provider.stf_taxi_per_mile_wheelchair_reimbursement_rate, :precision => 2), :size => 4, :min => "0", :max => "9999", :step => "0.01" %>
+        </li>
+      </ol>
+      <div class="actions">
+        <%= submit_tag "Save Reimbursement Rates" %>
+      </div>
+    </fieldset>
+  <% end %>
+<% end %>
+
 <% if @provider.dispatch? && can?(:edit, DevicePool) %>
   <% if @provider.device_pools.size == 0 %>
     <p>No device pools yet.</p>
